--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@ Upgrade cost：  提升到下一级的花费">
             </dl>
           </div>
         </div>
-        <div class="container-fluid" style=" border: 3px solid #982f2f; border-radius: 5px;" style="margin-bottom:2px;" data-toggle="tooltip" data-placement="top"
+        <div class="container-fluid" style=" border: 3px solid #982f2f; border-radius: 5px;" style="margin-bottom:2px;" data-toggle="tooltip" data-placement="left"
           style='display : block; width : 30px; height:30px'
           title="你可能想要知道的一些事
 #1 这是个塔防游戏
