refine index.html  add some introduction

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
       <div class="col-sm-4">
         <div class="container-fluid" style="margin-bottom:5px; padding-left:22px; border: 3px solid #982f2f;
-    border-radius: 5px;" data-toggle="tooltip" data-placement="down"
+    border-radius: 5px;" data-toggle="tooltip" data-placement="left"
       style='display : block; width : 30px; height:30px'
       title="游戏主状态版
 money:  你现在拥有的金币数目
