refine index.html

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               <img class='imgbottom' src='img/pause.png' title="暂停游戏" id='pause'/>
             </div>
             <div class="col-sm-4  vertical-align">
-              <img class='imgbottom' src='img/upgrade.png' title="升级在地图中选中的‘炮塔’/‘埃及方碑’" id='upgrade'/>
+              <img class='imgbottom' src='img/upgrade.png' title="升级在地图中选中的‘炮塔’/‘埃及尖碑’" id='upgrade'/>
             </div>
             <div class="col-sm-4  vertical-align">
               <img class='imgbottom' src='img/sell.png' title="出售在地图中选中的‘炮塔’" id='sell'/>
@@ -174,27 +174,27 @@ Upgrade cost：  提升到下一级的花费">
    ·道路可以任意形状，任意宽度，只要你连接左上和右下两个端点
    ·由于作者本人技术有限，请尽量避免在来回涂抹‘道路’过程中留下非常细小的绿色草皮孔洞
    ·其实上面那个问题用图像腐蚀方法也能解决，只是我比较懒，下次再改吧
-   ·左上有右下的两个角落被我定义为‘禁区’了，不能涂抹请勿见怪
-#3 那些地图中的埃及方碑是啥
-   ·方碑随机生成，大多在端点或角落
-   ·方碑具有生命和攻击力，可被怪物摧毁，也可以花钱重建/升级
-   ·端点的方碑如果被摧毁，以后的怪物就不会再去那个地方光顾咯
-   ·右下角那个有点不一样的方碑是你守护的目标，请努力吧
+   ·左上和右下的两个角落被我定义为‘禁区’了，不能涂抹请勿见怪
+#3 那些地图中的埃及尖碑是啥
+   ·尖碑随机生成，大多在端点或角落
+   ·尖碑具有生命和攻击力，可被怪物摧毁，也可以花钱重建/升级
+   ·端点的尖碑如果被摧毁，以后的怪物就不会再去那个地方光顾咯
+   ·右下角那个有点不一样的尖碑是你守护的目标哦
 #4 怪物
-   ·怪物想要找到并推倒右下角的塔
+   ·怪物想要找到并推倒右下角的埃及尖碑
    ·怪物会探索你的地图并尽量避免走重复的路
    ·遇到岔路，怪物们会派遣自己的势力探索比较有‘前途’的方向（当然有随机和权重效果在内）
-   ·怪物肯定不会去找被自己摧毁过的方碑所在的支路（除非你又花钱修复了方碑）
+   ·怪物肯定不会去找被自己摧毁过的尖碑所在的支路（除非你又花钱修复了尖碑）
    ·怪物有抗性！蓝色血条的怪能抵抗范围伤害，但是对机枪或镭射有伤害加成
    ·遇到宽阔的路面，怪物会变得小心谨慎（移动速度下降）
 #5 炮塔
    ·详细参看右侧栏建筑列表，鼠标移动上去会有说明
-   ·允许将炮塔建造在道路中间充当挡在埃及方碑前的‘肉盾’
+   ·允许将炮塔建造在道路中间充当挡在埃及尖碑前的‘肉盾’
 #6 地图上的花花草草
    ·除了少数石头和枯树外，你都能把炮塔建造在他们上
 #7 作者
-   ·兔兔备考加油！
-   ·欢迎来我的没人气博客观光（可能需要VPN） http://glassjar-home.appspot.com/
+   ·兔兔加油！
+   ·欢迎来我的博客观光（可能需要VPN） http://glassjar-home.appspot.com/
 ">
           <cite>How about design your map? Well, don't forget to link the two terminals :)</cite>
         </div>
