add full demo url

--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-  <a href="bbccyy.github.io/demoTdGame">Demo</a>
+  <a href="https://bbccyy.github.io/demoTdGame/">Demo</a>
 </body>
 </html>
